--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,21 +1,22 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 {% load static %}
 
 {% block title %}
-    Your shopping cart
+    {% trans "Your shopping cart" %}
 {% endblock %}
 
 {% block content %}
-    <h1>Your shopping cart</h1>
+    <h1>{% trans "Your shopping cart" %}</h1>
     <table class="cart">
         <thead>
             <tr>
-                <th>Image</th>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Remove</th>
-                <th>Unit price</th>
-                <th>Price</th>
+                <th>{% trans "Image" %}</th>
+                <th>{% trans "Product" %}</th>
+                <th>{% trans "Quantity" %}</th>
+                <th>{% trans "Remove" %}</th>
+                <th>{% trans "Unit price" %}</th>
+                <th>{% trans "Price" %}</th>
             </tr>
         </thead>
         <tbody>
@@ -39,7 +40,7 @@
                         </td>
                         <td>
                             <form action="{% url "cart:cart_remove" product.id %}" method="post">
-                                <input type="submit" value="Remove">
+                                <input type="submit" value="{% trans "Remove" %}">
                                 {% csrf_token %}
                             </form>
                         </td>
@@ -55,10 +56,9 @@
                     <td class="num">₦{{ cart.get_total_price|floatformat:2 }}</td>
                 </tr>
                 <tr>
-                    <td>
-                        "{{ cart.coupon.code }}" coupon
-                        ({{ cart.coupon.discount }}% off)
-                    </td>
+                    {% blocktrans with code=cart.coupon.code discount=cart.coupon.discount %}
+                        <td>"{{ code }}" coupon ({{ discount }}% off)</td>
+                    {% endblocktrans %}
                     <td colspan="4"></td>
                     <td class="num neg">
                         - ₦{{ cart.get_discount|floatformat:2 }}
@@ -66,7 +66,7 @@
                 </tr>
             {% endif %}
             <tr class="total">
-                <td>Total</td>
+                <td>{% trans "Total" %}</td>
                 <td colspan="4"></td>
                 <td class="num">
                     ₦{{ cart.get_total_price_after_discount|floatformat:2 }}
@@ -74,16 +74,16 @@
             </tr>
         </tbody>
     </table>
-    <p>Apply a coupon:</p>
+    <p>{% trans "Apply a coupon" %}:</p>
     <form action="{% url "coupons:apply" %}" method="post">
         {{ coupon_apply_form }}
         <input type="submit" value="Apply">
         {% csrf_token %}
     </form>
     <p class="text-right">
-        <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
+        <a href="{% url "shop:product_list" %}" class="button light">{% trans "Continue shopping" %}</a>
         <a href="{% url "orders:order_create" %}" class="button">
-            Checkout
+            {% trans "Checkout" %}
         </a>
     </p>
 {% endblock %}
